--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "uuid": "^8.3.2"
   }
 }
