--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
+    "socket.io": "^3.1.1",
     "uuid": "^8.3.2"
   }
 }
